# gen4ralph

./: Dockerfile  Makefile  README.md  docker-compose.yml  setup.cfg
src/gen4ralph/: __main__.py  cli.py
tests/: test_cli.py
