;;
;; gen4ralph package
;;
[metadata]
name = gen4ralph
version = 0.0.1
description = A cli that generates edX JSON Schemas with genson and pydantic models with datamodel-codegen for ralph
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/SergioSim/gen4ralph
license = MIT
keywords = Open edX, JSON Schema
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    click==7.1.2
    click-log==0.3.2
    datamodel-code-generator==0.10.0
    genson==1.2.2
    requests==2.25.1
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    bandit==1.7.0
    black==20.8b1
    flake8==3.9.0
    ipdb==0.13.7
    ipython==7.22.0
    isort==5.8.0
    memory-profiler==0.58.0
    pylint==2.7.2
    pytest==6.2.2
    pytest-cov==2.11.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  gen4ralph = gen4ralph.__main__:cli

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_gen4ralph=gen4ralph
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,THIRDPARTY,GEN4RALPH,FIRSTPARTY,LOCALFOLDER
skip_glob=venv

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=src/gen4ralph
python_files =
    test_*.py
    tests.py
testpaths =
    tests
